// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

package dolittle.services;

option csharp_namespace = "Dolittle.Services.Contracts";

message GetBindingsRequest {}

message ServiceType {
    string name = 1;
}

message Service {
    string name = 1;
}

message Services {
    repeated Service boundServices = 1;
}

// Represents all the bound gRPC services in the system
service BoundServices {
    rpc GetForServiceType(ServiceType) returns(Services) {}
}